automation/gitops/bootstrap-infra/templates/renovate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: renovate-operator
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
